--- a/IodemBot/packages.config
+++ b/IodemBot/packages.config
@@ -3,62 +3,71 @@
   <package id="Accord" version="3.8.0" targetFramework="net472" />
   <package id="Accord.Math" version="3.8.0" targetFramework="net472" />
   <package id="Accord.Statistics" version="3.8.0" targetFramework="net472" />
-  <package id="Discord.Net" version="2.1.1" targetFramework="net472" />
-  <package id="Discord.Net.Commands" version="2.1.1" targetFramework="net472" />
-  <package id="Discord.Net.Core" version="2.1.1" targetFramework="net472" />
-  <package id="Discord.Net.Providers.WS4Net" version="2.1.1" targetFramework="net472" />
-  <package id="Discord.Net.Rest" version="2.1.1" targetFramework="net472" />
+  <package id="Discord.Net" version="2.2.0" targetFramework="net472" />
+  <package id="Discord.Net.Commands" version="2.2.0" targetFramework="net472" />
+  <package id="Discord.Net.Core" version="2.2.0" targetFramework="net472" />
+  <package id="Discord.Net.Providers.WS4Net" version="2.2.0" targetFramework="net472" />
+  <package id="Discord.Net.Rest" version="2.2.0" targetFramework="net472" />
   <package id="Discord.Net.Rpc" version="1.0.2" targetFramework="net472" />
-  <package id="Discord.Net.Webhook" version="2.1.1" targetFramework="net472" />
-  <package id="Discord.Net.WebSocket" version="2.1.1" targetFramework="net472" />
-  <package id="JsonSubTypes" version="1.6.0" targetFramework="net472" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net472" />
+  <package id="Discord.Net.Webhook" version="2.2.0" targetFramework="net472" />
+  <package id="Discord.Net.WebSocket" version="2.2.0" targetFramework="net472" />
+  <package id="JsonSubTypes" version="1.7.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.1" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
-  <package id="Serilog" version="2.3.0" targetFramework="net472" />
-  <package id="Serilog.Extensions.Logging" version="2.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Serilog" version="2.9.0" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="3.0.1" targetFramework="net472" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net472" />
-  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net472" />
+  <package id="System.Interactive.Async" version="4.1.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
+  <package id="System.Linq.Async" version="4.1.1" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net472" />
   <package id="System.Net.Security" version="4.3.2" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -73,23 +82,24 @@
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
-  <package id="TwitchLib" version="3.0.1" targetFramework="net472" />
-  <package id="TwitchLib.Api" version="3.0.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core.Enums" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core.Interfaces" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core.Models" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.Helix" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.Helix.Models" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.V5" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.V5.Models" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Client" version="3.0.3" targetFramework="net472" />
-  <package id="TwitchLib.Client.Enums" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Client.Models" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib" version="3.1.1" targetFramework="net472" />
+  <package id="TwitchLib.Api" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Enums" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Interfaces" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Models" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix.Models" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5.Models" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Client" version="3.1.5" targetFramework="net472" />
+  <package id="TwitchLib.Client.Enums" version="3.1.4" targetFramework="net472" />
+  <package id="TwitchLib.Client.Models" version="3.1.5" targetFramework="net472" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net472" />
-  <package id="TwitchLib.PubSub" version="3.0.2" targetFramework="net472" />
+  <package id="TwitchLib.PubSub" version="3.1.4" targetFramework="net472" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net472" />
 </packages>
