--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Discord.Net.Rpc">
       <Version>1.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
     <PackageReference Include="JsonSubTypes">
       <Version>1.7.0</Version>
     </PackageReference>
@@ -65,6 +66,7 @@
     <PackageReference Include="System.Console">
       <Version>4.3.1</Version>
     </PackageReference>
+    <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
     <PackageReference Include="System.Diagnostics.Debug">
       <Version>4.3.0</Version>
     </PackageReference>
