--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="JsonSubTypes">
       <Version>1.7.0</Version>
     </PackageReference>
+    <PackageReference Include="LiteDB" Version="5.0.9" />
     <PackageReference Include="Microsoft.CSharp">
       <Version>4.7.0</Version>
     </PackageReference>
