--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -14,13 +14,13 @@
       <Version>3.8.0</Version>
     </PackageReference>
     <PackageReference Include="Discord.Net">
-      <Version>2.2.0</Version>
+      <Version>2.3.0-dev-20201028.4</Version>
     </PackageReference>
     <PackageReference Include="Discord.Net.Providers.WS4Net">
-      <Version>2.2.0</Version>
+      <Version>2.3.0-dev-20201028.4</Version>
     </PackageReference>
     <PackageReference Include="Discord.Net.Rpc">
-      <Version>1.0.2</Version>
+      <Version>2.0.0-beta-00860</Version>
     </PackageReference>
     <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
     <PackageReference Include="JsonSubTypes">
