--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -10,31 +10,19 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Accord.Statistics">
-      <Version>3.8.0</Version>
-    </PackageReference>
-    <PackageReference Include="Discord.Net">
-      <Version>2.3.0-dev-20201028.4</Version>
-    </PackageReference>
-    <PackageReference Include="Discord.Net.Providers.WS4Net">
-      <Version>2.3.0-dev-20201028.4</Version>
-    </PackageReference>
-    <PackageReference Include="Discord.Net.Rpc">
-      <Version>2.0.0-beta-00860</Version>
-    </PackageReference>
-    <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
+    <PackageReference Include="Accord.Statistics" Version="3.8.0" />
+    <PackageReference Include="Discord.Net" Version="2.3.0-dev-20201201.2" />
     <PackageReference Include="JsonSubTypes">
       <Version>1.7.0</Version>
     </PackageReference>
-    <PackageReference Include="LiteDB" Version="5.0.9" />
     <PackageReference Include="Microsoft.CSharp">
       <Version>4.7.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging">
-      <Version>3.1.8</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.Platforms">
-      <Version>3.1.3</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.Win32.Primitives">
@@ -62,7 +50,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Collections.Immutable">
-      <Version>1.7.1</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.ComponentModel">
       <Version>4.3.0</Version>
@@ -70,12 +58,11 @@
     <PackageReference Include="System.Console">
       <Version>4.3.1</Version>
     </PackageReference>
-    <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
     <PackageReference Include="System.Diagnostics.Debug">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.DiagnosticSource">
-      <Version>4.7.1</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.Tools">
       <Version>4.3.0</Version>
@@ -90,7 +77,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Interactive.Async">
-      <Version>4.1.1</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.IO.Compression">
       <Version>4.3.0</Version>
@@ -131,6 +118,7 @@
     <PackageReference Include="System.Runtime">
       <Version>4.3.1</Version>
     </PackageReference>
+    <PackageReference Include="System.Runtime.Caching" Version="5.0.0" />
     <PackageReference Include="System.Runtime.Extensions">
       <Version>4.3.1</Version>
     </PackageReference>
