--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Accord.Statistics" Version="3.8.0" />
-    <PackageReference Include="Discord.Net" Version="2.3.0-dev-20210121.1" />
+    <PackageReference Include="Discord.Net" Version="2.3.0" />
     <PackageReference Include="JsonSubTypes">
       <Version>1.7.0</Version>
     </PackageReference>
