--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <StartupObject>IodemBot.Program</StartupObject>
-    <ApplicationIcon>iodem_ZUO_icon.ico</ApplicationIcon>
+    <StartupObject></StartupObject>
+    <ApplicationIcon></ApplicationIcon>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
   <ItemGroup>
