--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -6,9 +6,9 @@
 		<ApplicationIcon></ApplicationIcon>
 		<DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
 		<Version>3.0.0.0</Version>
-		<AssemblyVersion>3.0.1118.7</AssemblyVersion>
+		<AssemblyVersion>3.0.21322.0</AssemblyVersion>
 		<Deterministic>false</Deterministic>
-		<FileVersion>3.0.0.24</FileVersion>
+		<FileVersion>3.0.0.25</FileVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 	  <ShouldCreateLogs>True</ShouldCreateLogs>
@@ -27,7 +27,7 @@
 	  <UpdateAssemblyVersion>True</UpdateAssemblyVersion>
 	  <UpdateAssemblyFileVersion>True</UpdateAssemblyFileVersion>
 	  <UpdateAssemblyInfoVersion>False</UpdateAssemblyInfoVersion>
-	  <AssemblyVersionSettings>None.None.MMddStamp.IncrementWithResetOnIncrease</AssemblyVersionSettings>
+	  <AssemblyVersionSettings>None.None.YearMonth.IncrementWithResetOnIncrease</AssemblyVersionSettings>
 	  <UpdatePackageVersion>False</UpdatePackageVersion>
 	  <AssemblyInfoVersionType>SettingsVersion</AssemblyInfoVersionType>
 	  <InheritWinAppVersionFrom>None</InheritWinAppVersionFrom>
