--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<StartupObject></StartupObject>
 		<ApplicationIcon></ApplicationIcon>
 		<DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
 		<Version>3.0.0.0</Version>
-		<AssemblyVersion>3.0.2201.21</AssemblyVersion>
+		<AssemblyVersion>3.1.2206.58</AssemblyVersion>
 		<Deterministic>false</Deterministic>
-		<FileVersion>3.0.0.113</FileVersion>
+		<FileVersion>3.0.0.172</FileVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 	  <ShouldCreateLogs>True</ShouldCreateLogs>
@@ -38,7 +38,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Accord.Statistics" Version="3.8.0" />
-		<PackageReference Include="Discord.Net.Labs" Version="3.6.1" />
+		<PackageReference Include="Discord.Net" Version="3.7.2" />
 		<PackageReference Include="JsonSubTypes">
 			<Version>1.7.0</Version>
 		</PackageReference>
