--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -38,7 +38,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Accord.Statistics" Version="3.8.0" />
-		<PackageReference Include="Discord.Net" Version="3.13.0" />
+		<PackageReference Include="Discord.Net" Version="3.13.0-20231203.4" />
 		<PackageReference Include="JsonSubTypes">
 			<Version>1.7.0</Version>
 		</PackageReference>
